# Pegasus

./: .gitignore  CMakeLists.txt
Include/: Engine.h  GameRenderer.h  IRenderer.h  Log.h  Model.h  ModelManager.h  PegasusGL.h  SceneManager.h  SceneNode.h  Shader.h  Timer.h
Resources/Shaders/: model.frag  model.vert  simple.frag  simple.vert
Source/: Engine.cpp  GameRenderer.cpp  Log.cpp  Main.cpp  Model.cpp  ModelManager.cpp  PegasusGL.cpp  SceneManager.cpp  SceneNode.cpp  Shader.cpp  Timer.cpp
cmake/Modules/: FindAssimp.cmake
